# home_task_11new

./: alembic.ini  app.py  db.py  main.py  main_old.py  main_poshta.py  pyproject.toml  sql_app.db  ДЗ11
alembic/: env.py
docs/: conf.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 3223de4eea10_init.py  45f3f83c88f6_init.py  55aa062116a9_init.py  778b1543eb16_init.py
src/: schemas.py
src/database/: db.py  db_old.py  models.py  users_db.py
src/repository/: contacts.py  notes.py  users.py  users_0.py
src/routes/: auth.py  chek_docstrings  contacts.py  notes.py  users.py  users_0.py
src/services/: auth.py  email.py
src/tests/: test_unit_repository_contacts.py
tests/: conftest.py  sql_app.db  test_route_auth.py  test_unit_repository_contacts.py
